packages/parser/test/tokenizer/E0012-binary.txt
0b1010.14
===== err =====
anonymous:1:1: SyntaxError: E0012 - Binary float literals are not allowed
1 | 0b1010.14
  | ~~~~~~~~~
